Fix overflowing issue

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -194,8 +194,7 @@
   padding: var(--padding-md);
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 80px repeat(3, 1fr);
-  height: clamp(600px, 100vh, 1920px);
+  grid-template-rows: 90px 90px 50px 1fr;
 }
 
 /* Search bar */
@@ -207,8 +206,10 @@
 }
 
 .search-bar form {
-  width: 700px;
-  height: 40px;
+  width: clamp(300px, 70%, 1000px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .search-bar input {
@@ -258,7 +259,7 @@
   background-color: var(--gray);
   padding: var(--padding-md);
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: var(--padding-sm);
 }
 
